--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "rimraf": "^5.0.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "naive-bayes": "file:./"
   },
   "dependencies": {
     "@discordjs/collection": "^1.5.1",
